--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,12 +30,12 @@
     </style>
 
     <style name="detail_title" parent="detail_text">
-        <item name="android:textColor">@color/detail_title</item>
+        <item name="android:textColor">@color/default_detail_title</item>
         <item name="android:textSize">17sp</item>
     </style>
 
     <style name="detail_content" parent="detail_text">
-        <item name="android:color">@color/detail_content</item>
+        <item name="android:textColor">@color/default_detail_content</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textIsSelectable">true</item>
     </style>
