--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -135,8 +135,8 @@
                     android:id="@+id/ll_comment_replies"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="end"
+                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
@@ -145,7 +145,7 @@
                         android:id="@+id/iv_replies"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginEnd="5dp"
                         android:layout_marginTop="5dp"
                         android:src="@drawable/reply" />
 
@@ -156,13 +156,13 @@
                         android:layout_marginTop="5dp"
                         tools:text="166" />
                 </LinearLayout>
-
+                <!--android:layout_toLeftOf="@+id/ll_comment_replies"-->
                 <LinearLayout
                     android:id="@+id/ll_comment_likes"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/ll_comment_replies"
                     android:layout_weight="1"
+                    android:layout_gravity="end"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
@@ -170,7 +170,7 @@
                         android:id="@+id/iv_comment_likes"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginEnd="5dp"
                         android:layout_marginTop="5dp"
                         android:src="@drawable/appreciate" />
 
@@ -201,7 +201,7 @@
             android:background="@color/comment_content_grey"
             android:gravity="end"
             android:padding="6dp"
-            android:textColor="@color/text_updatetime"
+            android:textColor="@color/default_comment_update_time_text"
             tools:text="---updated at 2016-10-01 07:22:21" />
 
     </LinearLayout>
