--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -148,7 +148,7 @@
                         android:layout_height="20dp"
                         android:layout_marginEnd="5dp"
                         android:layout_marginTop="5dp"
-                        android:src="@drawable/reply" />
+                        android:src="@drawable/ic_reply_blue_48dp" />
 
                     <TextView
                         android:id="@+id/tv_comments_replies"
@@ -174,7 +174,7 @@
                         android:layout_height="20dp"
                         android:layout_marginEnd="5dp"
                         android:layout_marginTop="5dp"
-                        android:src="@drawable/appreciate" />
+                        android:src="@drawable/ic_thumb_up_stroke_blue_48dp" />
 
                     <TextView
                         android:id="@+id/tv_comment_likes"
