--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="bottom"
         android:layout_weight="2"
         android:gravity="center"
@@ -39,8 +39,8 @@
     <ImageView
         android:id="@+id/iv_reply"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="bottom"
         android:layout_weight="1"
-        android:src="@drawable/send" />
+        android:src="@drawable/ic_send_black_48dp" />
 </LinearLayout>
