--- a/app/src/main/res/layout/item_recommend_picker.xml
+++ b/app/src/main/res/layout/item_recommend_picker.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:mocloud="http://schemas.android.com/apk/res-auto"
     style="@style/card_style"
+    android:background="@color/default_bg_color"
     android:layout_width="wrap_content">
 
     <LinearLayout
@@ -35,7 +36,7 @@ http://www.rottentomatoes.com/top/bestofrt/?year=2017" />
         <com.floatingmuseum.mocloud.widgets.RatioImageView
             android:id="@+id/iv_poster"
             mocloud:image_ratio="1.42"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:scaleType="fitXY" />
 
