--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,4 +41,5 @@
     <color name="collection_color">#16a085</color>
     <color name="poster_tag_bg_red">#ED1C24</color>
     <color name="poster_tag_text_white">#FFFFFF</color>
+    <color name="default_tag_color">#009EDF</color>
 </resources>
