--- a/app/src/main/res/layout/layout_recommend_list.xml
+++ b/app/src/main/res/layout/layout_recommend_list.xml
@@ -1,79 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/default_comment_content_bg"
-    android:orientation="vertical">
-
-    <TextView
-        style="@style/detail_content"
-        tools:text="Rotten Tomatoes: Best of 2017" />
-
-    <TextView
-        style="@style/detail_content"
-        tools:text="Pulled from Rotten Tomatoes Top Movies section:\r\nhttp://www.rottentomatoes.com/top/bestofrt/?year=2017\r\n\r\nUPDATED: 7/7/17" />
-
-    <TextView
-        style="@style/detail_content"
-        tools:text="LISH" />
-
-    <TextView
-        style="@style/detail_content"
-        tools:text="2017-07-12T15:45:32.000Z" />
+    style="@style/card_style">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_content_copy_blue_48dp" />
+        android:layout_height="wrap_content"
+        android:background="@color/default_comment_content_bg"
+        android:orientation="vertical"
+        android:padding="5dp">
 
         <TextView
-            android:id="@+id/tv_list_items_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            tools:text="250" />
-
-        <ImageView
-            android:id="@+id/iv_list_likes"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_thumb_up_stroke_blue_48dp" />
+            android:id="@+id/tv_feature_list_name"
+            style="@style/detail_content"
+            android:textColor="@color/default_comment_title_text"
+            tools:text="Rotten Tomatoes: Best of 2017" />
 
         <TextView
-            android:id="@+id/tv_list_likes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            tools:text="42" />
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_comment_blue_48dp" />
+            android:id="@+id/tv_feature_list_desc"
+            style="@style/detail_content"
+            android:textColor="@color/default_comment_title_text"
+            tools:text="Pulled from Rotten Tomatoes Top Movies section:\r\nhttp://www.rottentomatoes.com/top/bestofrt/?year=2017\r\n\r\nUPDATED: 7/7/17" />
 
         <TextView
-            android:id="@+id/tv_list_comments"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            tools:text="6" />
+            android:id="@+id/tv_feature_list_username"
+            style="@style/detail_content"
+            android:textColor="@color/default_comment_title_text"
+            tools:text="LISH" />
 
-        <at.grabner.circleprogress.CircleProgressView
-            android:layout_width="20dp"
+        <TextView
+            android:id="@+id/tv_feature_list_update_time"
+            style="@style/detail_content"
+            android:textColor="@color/default_comment_title_text"
+            tools:text="2017-07-12T15:45:32.000Z" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="20dp"
-            app:cpv_autoTextSize="true"
-            app:cpv_barColor="@color/default_tag_color"
-            app:cpv_barWidth="1dp"
-            app:cpv_rimColor="@color/comment_content_grey"
-            app:cpv_rimWidth="1dp"
-            app:cpv_seekMode="false"
-            app:cpv_value="30" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/ic_content_copy_blue_48dp" />
+
+            <TextView
+                android:id="@+id/tv_feature_list_items_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="1dp"
+                android:textColor="@color/default_comment_title_text"
+                tools:text="250" />
+
+            <com.github.lzyzsd.circleprogress.DonutProgress
+                android:id="@+id/dt_feature_list_progress"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="5dp"
+                app:donut_circle_starting_degree="270"
+                app:donut_finished_color="@color/default_tag_color"
+                app:donut_finished_stroke_width="3dp"
+                app:donut_max="100"
+                app:donut_progress="30"
+                app:donut_text="30"
+                app:donut_text_color="@color/default_comment_title_text"
+                app:donut_text_size="6sp"
+                app:donut_unfinished_color="@color/white_text"
+                app:donut_unfinished_stroke_width="2dp" />
+
+            <TextView
+                android:id="@+id/tv_feature_list_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="1dp"
+                android:textColor="@color/default_comment_title_text"
+                tools:text="6/250" />
+
+            <ImageView
+                android:id="@+id/iv_list_likes"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/ic_thumb_up_stroke_blue_48dp" />
+
+            <TextView
+                android:id="@+id/tv_feature_list_likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="1dp"
+                android:textColor="@color/default_comment_title_text"
+                tools:text="42" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="5dp"
+                android:src="@drawable/ic_comment_blue_48dp" />
+
+            <TextView
+                android:id="@+id/tv_feature_list_comments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="1dp"
+                android:textColor="@color/default_comment_title_text"
+                tools:text="6" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</android.support.v7.widget.CardView>
