--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/default_bg_color"
     android:orientation="vertical">
 
     <include layout="@layout/layout_appbar" />
@@ -39,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone"
-            app:indicatorColor="@color/loading"
+            app:indicatorColor="@color/default_loading_color"
             app:indicatorName="LineScaleIndicator" />
 
         <LinearLayout
@@ -47,7 +48,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/loading_token_request"
-            android:background="@color/default_bg_color"
             android:gravity="center_horizontal"
             android:orientation="vertical" />
     </RelativeLayout>
